[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone_up_and_down"
version = "0.5.0"
dependencies = [
    "yfinance"
]
authors = [
    { name = "kitman", email = "ken000666@outlook.com" },
    { name = "DEVILENMO", email = "DEVILENMO@gmail.com" }
]
description = "Stock market simulation plugin"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/kitman0000/UpsAndDowns"

[project.entry-points."endstone"]
up_and_down = "endstone_up_and_down:UpAndDownPlugin"