[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone_up_and_down"
version = "0.4.0"
dependencies = [
    "yfinance"
]
authors = [
    { name = "kitman & DEVILENMO", email = "hello@endstone.dev" },
]
description = "Stock market simulation plugin"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/kitman0000/UpsAndDowns"

[project.entry-points."endstone"]
up-and-down = "endstone_up_and_down:UpAndDownPlugin"